--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
   "dependencies": {
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
+    "inversify": "^4.5.1",
     "mongodb": "^2.2.33",
-    "mongoose": "^4.13.0"
+    "mongoose": "^4.13.0",
+    "q": "^1.5.1",
+    "reflect-metadata": "^0.1.10"
   },
   "devDependencies": {
     "@types/body-parser": "^1.16.7",
     "@types/express": "^4.0.39",
+    "@types/inversify": "^2.0.33",
     "@types/mongodb": "^2.2.15",
     "@types/mongoose": "^4.7.25"
   }
